# ai-heeczer

./: .editorconfig  .gitignore  .gitleaks.toml  .markdownlint.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  clippy.toml  deny.toml  docker-compose.dev.yml  go.work
.devcontainer/: devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_IMPACT_TEMPLATE.md  copilot-instructions.md  dependabot.yml  release-please-config.json  release-please-manifest.json
.github/agents/: code-reviewer.md  devex-engineer.md  release-engineer.md  sdk-engineer.md  security-engineer.md  tech-lead.md  tech-writer.md  test-engineer.md
.github/workflows/: bench-smoke.yml  ci.yml  codeql.yml  codeql.yml.new  contract.yml  docs.yml  integration.yml  migration.yml  parity.yml  release-dry-run.yml  release-please.yml  release-resume.yml  release.yml  workflow-defuser.yml
bindings/heeczer-go/: CHANGELOG.md  README.md  go.mod  heeczer.go  heeczer_test.go
bindings/heeczer-java/: CHANGELOG.md  README.md  pom.xml
bindings/heeczer-js/: CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.cjs.json  tsconfig.json
bindings/heeczer-js/scripts/: parity.mjs  rename-cjs.mjs
bindings/heeczer-js/src/: index.ts
bindings/heeczer-js/tests/: client.test.ts  contract.test.ts
bindings/heeczer-py/: CHANGELOG.md  README.md  pyproject.toml
bindings/heeczer-py/scripts/: parity.py
bindings/heeczer-py/src/heeczer/: __init__.py  client.py  models.py
bindings/heeczer-py/src/heeczer/adapters/: __init__.py  google_adk.py  langgraph.py  pydantic_ai.py
bindings/heeczer-py/tests/: test_adapters.py  test_client.py  test_contract.py
bindings/heeczer-rs/: Cargo.toml  README.md
bindings/heeczer-rs/examples/: quickstart.rs
bindings/heeczer-rs/src/: error.rs  http.rs  lib.rs  native.rs
bindings/heeczer-rs/tests/: http_client.rs  native.rs  parity.rs
core/heeczer-cli/: Cargo.toml
core/heeczer-cli/src/: main.rs
core/heeczer-cli/tests/: cli.rs
core/heeczer-core/: Cargo.toml  README.md
core/heeczer-core-c/: Cargo.toml  build.rs  cbindgen.toml  heeczer_core_c.h
core/heeczer-core-c/src/: lib.rs
core/heeczer-core/benches/: score_bench.rs
core/heeczer-core/schema/: event.v1.json  scoring_profile.v1.json  tier_set.v1.json
core/heeczer-core/src/: calibration.rs  confidence.rs  error.rs  event.rs  explain.rs  lib.rs  normalize.rs  profile.rs  schema.rs  scoring.rs  tier.rs  version.rs
core/heeczer-core/tests/: calibration.rs  contract.rs  determinism.rs  golden_score_result_json.rs  golden_scoring.rs  properties.rs  schema_validation.rs
core/heeczer-storage/: Cargo.toml
core/heeczer-storage/migrations/: 0001_init.sql  0002_append_only_audit_and_global_unique.sql  0003_calibration.sql  0004_hard_delete.sql  0005_audit_log_pii_redaction.sql  0006_batch_idempotency.sql
core/heeczer-storage/migrations-pg/: 0001_init.sql  0002_append_only_audit_and_global_unique.sql  0003_calibration.sql  0004_hard_delete.sql  0005_audit_log_pii_redaction.sql  0006_batch_idempotency.sql
core/heeczer-storage/src/: admin.rs  error.rs  lib.rs  pg.rs  sqlite.rs
core/heeczer-storage/tests/: hard_delete.rs  hardening.rs  migration_pg.rs
core/schema/: event.v1.json  scoring_profile.v1.json
core/schema/profiles/: default.v1.json
core/schema/tiers/: default.v1.json
dashboard/: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
dashboard/e2e/: overview.spec.ts
dashboard/scripts/: start-standalone.js
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/components/: confidence-badge.tsx  metric-card.tsx  navigation.tsx  settings-panel.tsx  status-pill.tsx  trend-chart.tsx
dashboard/src/lib/: dashboard-data.ts  fixture-catalog.ts  session.test.ts  session.ts
docs/adr/: 0000-template.md  0001-rust-core-engine.md  0002-canonical-event-schema.md  0003-scoring-versioning.md  0004-database-migration-tooling.md  0005-ingestion-service-language.md  0006-queue-backend.md  0007-monorepo-tooling.md  0008-dashboard-ui-framework.md  0009-release-control-plane.md  0010-local-developer-cli.md  0011-c-abi-envelope.md  0012-dashboard-test-orchestration.md
docs/agents/: AGENT_HARNESS.md
docs/architecture/: benchmarks.md  calibration.md  cicd.md  dashboard.md  data-model.md  deployment-modes.md  integrations.md  privacy.md  scoring-engine.md  security.md  system-overview.md
docs/plan/: 0000-overview.md  0001-schema-and-contracts.md  0002-scoring-core.md  0003-storage-and-migrations.md  0004-ingestion-service.md  0005-sdk-jsts.md  0006-sdk-python.md  0007-sdk-go.md  0008-sdk-rust.md  0009-sdk-java.md  0010-dashboard.md  0011-framework-adapters.md  0012-cicd-release.md  0013-developer-experience.md  0014-security-and-privacy.md  0015-calibration-benchmarks.md  0016-local-sdk-test-stacks.md
docs/prd/: ai-heeczer-prd.md
docs/research/: hee-fec-scoring-model.md
docs/runbooks/: release.md  rescore.md
examples/: README.md  cli.md  event.json
examples/go/: go.mod  quickstart.go
examples/google-adk/: README.md
examples/java/: Quickstart.java
examples/langgraph/: README.md
examples/node/: quickstart.mjs
examples/pydanticai/: README.md
examples/python/: quickstart.py
scripts/: check-scoring-version.sh  run-parity.sh
services/heeczer-ingest/: Cargo.toml  Dockerfile.dev  README.md  openapi.yaml
services/heeczer-ingest/src/: auth.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  openapi.rs  queue.rs  state.rs  worker.rs
services/heeczer-ingest/tests/: integration.rs
src/: lib.rs
testing/: README.md
testing/compose/_bin/: stack-all.sh  stack.sh
testing/compose/_shared/: dashboard.yml  ingest.yml  ollama.yml  postgres.yml
testing/compose/rs/chatbot/: Cargo.toml  Dockerfile
testing/compose/rs/chatbot/src/: main.rs
testing/compose/rs/chatbot/src/skills/: catalogue.rs
testing/compose/rs/chatbot/src/tools/: catalogue.rs
(+109 files in other folders)
