[workspace]
resolver = "2"
members = [
    ".",
    "core/heeczer-core",
    "core/heeczer-core-c",
    "core/heeczer-cli",
    "core/heeczer-storage",
    "services/heeczer-ingest",
    "bindings/heeczer-rs",
]

[package]
name = "ai-heeczer-workspace"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[workspace.package]
edition = "2021"
# MSRV must match rust-toolchain.toml so contributors and CI build identically.
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/cognizhi/ai-heeczer"
authors = ["ai-heeczer contributors"]

[workspace.dependencies]
# Determinism + serde
rust_decimal = { version = "1.36", default-features = false, features = ["serde-with-str", "maths"] }
rust_decimal_macros = "1.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Schema
jsonschema = { version = "0.46", default-features = false }

# Time
time = { version = "0.3", features = ["serde", "parsing", "formatting", "macros"] }

# UUID
uuid = { version = "1", features = ["serde", "v4"] }

# CLI
clap = { version = "4", features = ["derive", "wrap_help"] }
anyhow = "1"

# Storage
sqlx-core = { version = "0.8", default-features = false, features = ["_rt-tokio", "migrate"] }
sqlx-sqlite = { version = "0.8", default-features = false, features = ["bundled", "migrate"] }
sqlx-postgres = { version = "0.8", default-features = false, features = ["migrate"] }
sqlx-macros = { version = "0.8", default-features = false, features = ["migrate", "sqlite", "postgres", "_rt-tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }

# Test
proptest = "1"
insta = { version = "1", features = ["json", "yaml"] }
pretty_assertions = "1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
struct_excessive_bools = "allow"
unnecessary_wraps = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
