[package]
name = "heeczer"
description = "Idiomatic Rust SDK for ai-heeczer — in-process scoring + HTTP client."
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
heeczer-core = { path = "../../core/heeczer-core", version = "0.4.0" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"], optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[features]
default = ["native"]
# "native" = in-process scoring via heeczer-core (no network hop).
native = []
# "http" = async HTTP client targeting the ingestion service.
http = ["dep:reqwest", "dep:tokio"]

[dev-dependencies]
rust_decimal = { workspace = true }
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6"
