[package]
name = "heeczer-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "aih: canonical local CLI for the ai-heeczer scoring core (ADR-0010)."

[[bin]]
name = "aih"
path = "src/main.rs"

[dependencies]
heeczer-core = { workspace = true }
heeczer-storage = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = { workspace = true }

[lints]
workspace = true
