[package]
name = "heeczer-cli"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "heec: canonical local CLI for the ai-heeczer scoring core (ADR-0010)."

[[bin]]
name = "heec"
path = "src/main.rs"

[dependencies]
heeczer-core = { path = "../heeczer-core", version = "0.2.0" }
heeczer-storage = { path = "../heeczer-storage", version = "0.2.0" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sqlx-core = { workspace = true }
tokio = { workspace = true }
include_dir = "0.7"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
