[package]
name = "heeczer-core-c"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "C ABI surface for heeczer-core. Consumed by Go (cgo), Java (FFM), and other native FFI clients."

[lib]
name = "heeczer_core_c"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
heeczer-core = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
no_mangle_with_rust_abi = "allow"
missing_safety_doc = "allow"
not_unsafe_ptr_arg_deref = "allow"
