[package]
name = "heeczer-storage"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Storage layer for ai-heeczer (SQLite + PostgreSQL via sqlx)."

[dependencies]
heeczer-core = { path = "../heeczer-core", version = "0.3.0" }
sqlx-core = { workspace = true }
sqlx-sqlite = { workspace = true }
sqlx-postgres = { workspace = true }
sqlx-macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
