[package]
name = "heeczer-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "ai-heeczer ingestion service (axum + sqlx). See ADR-0005, plan 0004."

[[bin]]
name = "heeczer-ingest"
path = "src/main.rs"

[dependencies]
heeczer-core = { workspace = true }
heeczer-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = { workspace = true }
http-body-util = "0.1"

[lints]
workspace = true
