[package]
name = "heeczer-ingest"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "ai-heeczer ingestion service (axum + sqlx). See ADR-0005, plan 0004."

[[bin]]
name = "heeczer-ingest"
path = "src/main.rs"

[dependencies]
heeczer-core = { path = "../../core/heeczer-core", version = "0.2.0" }
heeczer-storage = { path = "../../core/heeczer-storage", version = "0.2.0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
sqlx-core = { workspace = true }
sqlx-sqlite = { workspace = true }
anyhow = { workspace = true }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }
figment = { version = "0.10", features = ["env", "toml"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = { workspace = true }
http-body-util = "0.1"

[lints]
workspace = true
